fix: disable transition for choice select options when collapsed to avoid the background color white blinking

--- a/src/code-blocks/components/ChoiceGroup.css
+++ b/src/code-blocks/components/ChoiceGroup.css
@@ -101,6 +101,9 @@
     .choice-select__border {
       transition: none;
     }
+    .choice-select__option {
+      transition: none;
+    }
   }
 
   .choice-select__option:not(:last-child) {
